--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <title>Miden ID</title>
+    <script>
+      // Force light mode: never apply dark class
+      (function () {
+        try {
+          localStorage.setItem('vite-ui-theme', 'light')
+        } catch (e) {}
+        document.documentElement.classList.remove('dark')
+      })()
+    </script>
   </head>
   <body>
     <div id="root"></div>
