fix: tags added to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#0FE046" />
   <title>Miden Name</title>
+  <meta name="description" content="Miden Name is the canonical naming service for the Miden network. " />
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Miden Name" />
+  <meta itemprop="description" content="Miden Name is the canonical naming service for the Miden network. " />
+  <meta itemprop="image" content="/favicon.png" />
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://miden.name/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Miden Name" />
+  <meta property="og:description" content="Miden Name is the canonical naming service for the Miden network. " />
+  <meta property="og:image" content="/favicon.png" />
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Miden Name" />
+  <meta name="twitter:description" content="Miden Name is the canonical naming service for the Miden network. " />
+  <meta name="twitter:image" content="/favicon.png" />
   <script>
     // Initialize theme from localStorage or default to dark
     (function () {
